[tool.poetry]
name = "portfolio-tracker"
version = "0.1.0"
description = "A project for tracking your portfolio"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2.9.10"
sqlalchemy = "^2.0.41"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
